--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/pick-your-meat/logo.png" /> 
+    <link rel="icon" type="image/png" href="/pick-your-meat/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Découvrez et explorez les différents morceaux de viande et leurs caractéristiques" />
+    <meta
+      name="description"
+      content="Découvrez et explorez les différents morceaux de viande et leurs caractéristiques"
+    />
     <title>Pick Your Meat - Explorer les morceaux de viande</title>
   </head>
   <body>
